src/test/deca/syntax/invalid/sansobjet/lex_floathex_valid.deca.resu
FLOAT: [@0,120:130='0xaf.09p+11',<40>,4:0]
FLOAT: [@1,132:141='0xaf.09P11',<40>,5:0]
FLOAT: [@2,143:153='0xaf.09p-11',<40>,6:0]
FLOAT: [@3,155:166='0xaf.09p+11f',<40>,7:0]
FLOAT: [@4,168:178='0xaf.09P11f',<40>,8:0]
FLOAT: [@5,180:191='0xaf.09p-11f',<40>,9:0]
FLOAT: [@6,193:204='0xaf.09p+11F',<40>,10:0]
FLOAT: [@7,206:216='0xaf.09P11F',<40>,11:0]
FLOAT: [@8,218:229='0xaf.09p-11F',<40>,12:0]
